--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,89 +1,68 @@
-<?php
-//print_r($_SESSION);
-?>
-<!DOCTYPE html>
-<!--<?php 
-echo $this->doctype() ?>-->
-<!-- To be HTML5 we do this -->
-  <!--<html xmlns="http://www.w3.org/1999/xhtml">-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <!-- To be HTML5 we do this -->
-  <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-  <meta charset="utf-8" />
-
-  <title>PLACE.web</title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    
-    <script type="text/javascript" src="/jquery/jqueryfileupload/jquery.iframe-transport.js"></script>
-    <script type="text/javascript" src="/jquery/jqueryfileupload/jquery.fileupload.js"></script>
-    <script type="text/javascript" src="/jquery/jqueryfileupload/jquery.fileupload-ui.js"></script>
-    
-    <script type="text/javascript" src="/jquery/jplayer/jquery.jplayer.min.js"></script>
-	<script type="text/javascript" src="/jquery/dataTables/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-    
-    <link type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/cupertino/jquery-ui.css" />
-    <link type="text/css" rel="stylesheet" href="/jquery/jqueryfileupload/jquery.fileupload-ui.css" />
-    <link type="text/css" rel="stylesheet" href="/jquery/jplayer/themes/blue.monday/jplayer.blue.monday.css" />
-	<link type="text/css" rel="stylesheet" href="/css/dataTables.css" />
-	<link type="text/css" rel="stylesheet" href="/css/dataTables.page.css" />
-	<link type="text/css" rel="stylesheet" href="/css/dataTables.jui.css" />
-
-	<script src="/js/basic.js" type="text/javascript" ></script>
-	<link type="text/css" href="/css/styles.css" rel="stylesheet" />
-<?php 
-	//echo $this->headLink()->appendStylesheet('/css/global.css') 
-?>
-<?php 
-	require(APPLICATION_PATH.'/layouts/include/'.'tinymce.head.inc.php');
-?>
-
-</head>
-
-<body> 	  
+	<head>
+		<meta charset="utf-8">
 		
-<div id="web-container-mask" class="div-hide"></div>
-<div id="web-container-home" class="div-hide">
-	<div id="web-close-btn">
-	<a href="#" class="ui-dialog-titlebar-close ui-corner-all" onClick="closeWeb()">
-	<span class="ui-icon ui-icon-closethick"></span></a>
-	</div>
+		<title>
+			PLACE.web
+		</title>
+		
+		<!-- 						EXTERNAL CSS		 					-->		
+		<link type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/cupertino/jquery-ui.css">
+		<link type="text/css" rel="stylesheet" href="/jquery/jqueryfileupload/jquery.fileupload-ui.css">
+		<link type="text/css" rel="stylesheet" href="/css/dataTables.css">
+		<link type="text/css" rel="stylesheet" href="/css/dataTables.page.css">
+		<link type="text/css" rel="stylesheet" href="/css/dataTables.jui.css">
+		<link type="text/css" rel="stylesheet" href="/css/absolution.blue.css">
+		<link type="text/css" rel="stylesheet" href="/css/styles.css">
+		
+		<!-- 						EXTERNAL JAVASCRIPT 					-->
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+		<script type="text/javascript" src="/jquery/jqueryfileupload/jquery.iframe-transport.js"></script>
+		<script type="text/javascript" src="/jquery/jqueryfileupload/jquery.fileupload.js"></script>
+		<script type="text/javascript" src="/jquery/jqueryfileupload/jquery.fileupload-ui.js"></script>
+		<script type="text/javascript" src="/jquery/jplayer/jquery.jplayer.min.js"></script>
+		<script type="text/javascript" src="/jquery/dataTables/jquery.dataTables.min.js"></script>
+		<script type="text/javascript" src="/jquery/jquery-uniform.js"></script>
+		<script type="text/javascript" src="/js/basic.js"></script>
+		<script type="text/javascript" src="/js/less.js"></script>
+		<script type="text/javascript" src="/swampy_browser/sb.js"></script>
+		<script type="text/javascript" src="/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
+		<script type="text/javascript" src="/tinymce/jscripts/tiny_mce/tinymce.head.js"></script>
+		
+		<script type='text/javascript'>
+		$(document).ready(function () {
+			$("button").button()
+			
+			$("button[href]").click(function(){
+				window.location.href = $(this).attr('href')
+			})
+			
+			$(".buttonset").buttonset()
+			
+			$("input:file, input:checkbox, input:radio, select").uniform()
+		})
+		</script>
+	</head>
 	
-	<div id="web-title" class="dashlet-title">Associative Web</div>
-	<div class="clear"></div>
-	<iframe id="webiframe" width="100%" height="670px"></iframe>
-</div>
-<div id="container">
-	<?php 
-	require(APPLICATION_PATH.'/layouts/include/'.'header.inc.php');
-	?>
-	<div id="main_content">
-		<a name="content"></a>
-	    <?php echo $this->layout()->content ?>
-		    
-		    
-	</div><!-- /main_content --> 
-		<?php 
-			require(APPLICATION_PATH.'/layouts/include/'.'footer.inc.php');
-		?>
-</div><!-- /container -->
-
-<div id="debugMode">
-
-<?php
-
-?>
-</div> 
-
-<script> 
-	window.onload = function(){
-		$("input:button").button();  
-		$("input:reset").button();
-		$("button").button();
-	}
-</script>
-
-</body>
+	
+	<body>
+		<div id="web-container-mask" class="div-hide"></div>
+		
+		
+		<div id="container">
+			<?= $this->partial('header.partial.phtml')?>
+			
+			<div id="main_content">
+				<?php echo $this->layout()->content ?>
+			</div>
+			
+			<?= $this->partial('footer.partial.phtml')?>
+		</div>
+		
+		
+		<div id="debugMode"></div>
+	</body>
 </html>
