--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,20 @@
+.page-ratio {
+	margin: 10px auto;
+	width: 970px;
+}
+
+#header-right {
+	float: right;
+	width: 450px;
+	text-align: right;
+}
+
+#header-left {
+	float: left;
+	width: 450px;
+}
+
+
 .date {
     color: #414B53;
     float: right;
@@ -70,7 +87,7 @@
 }
 
 #change-password-container{
-	border: 1px dashed #CCCCCC;
+	border: none;
 }
 
 #reply-original-msg{
@@ -214,7 +231,6 @@ border:1px solid #ccc;
 	font-size: small;
 	color: #414B53;
 	background: white;
-	border-top: 1px solid lightGrey;
 }
 
 .alert strong {
@@ -325,8 +341,8 @@ border:1px solid #ccc;
 
 
 #login-form{
-    border: 2px solid #000000;
-    padding:1em;
+    border: none;
+    padding:2em;
 }
 
 #login-form form label {
@@ -480,15 +496,6 @@ display:none;
 }
 
 
-#welcome {
-	background: none repeat scroll 0 0 #FFFFFF;
-	margin-top: 24px;
-}
-
-#welcome span{
-    color: #133d7f;
-}
-
 li.header-li{
     background-color: #DBDBDB;
     display: block;
@@ -517,17 +524,8 @@ li.header-li a{
 }
 
 #project-name {
-    background-color: #DD9E37;
-    color: #FFFFFF;
-    float: right;
-    font-size: 17pt;
-    padding: 10px 0;
-    text-align: center;
-    width: 628px;
-}
-
-#header {
-    float: left;
+    color: black;
+    font-size: 13pt;
 }
 
 #header-logout {
@@ -549,7 +547,7 @@ li.header-li a{
 
 .dashlet-box-image {
     background: none repeat scroll 0 0 #F6F6F6;
-    border: 1px solid #000000;
+    border: 1px solid darkGray;
     border-radius: 6px 6px 6px 6px;
     box-shadow: 1px 1px 3px;
     color: #333333;
@@ -560,6 +558,13 @@ li.header-li a{
     overflow: hidden;
     padding: 0.5em;
     text-align: center;
+	width: 100%;
+	float: left;
+	height: 300px;
+}
+
+.dashlet-box-image-details {
+    width: 400px;
 }
 
 .dashlet-box-image .image-holder {
@@ -568,9 +573,8 @@ li.header-li a{
 
 .dashlet-box {
     background: none repeat scroll 0 0 #DBDBDB;
-    border: 1px solid #000000;
+    border: 1px solid darkGray;
     border-radius: 6px 6px 6px 6px;
-    box-shadow: 1px 1px 3px;
     color: #000000;
     margin-bottom: 1em;
     margin-right: 1em;
@@ -596,7 +600,7 @@ li.header-li a{
 }
 
 .dashlet-title {
-    border-bottom: 1px solid;
+    border-bottom: 1px solid darkGray;
     color: #414B53;
     font-size: 1em;
     font-weight: bold;
@@ -606,14 +610,13 @@ li.header-li a{
 }
     
 div#course-actions-teacher {
-	width: 425px;
-	height: 70px;
-	padding: 10px;              
+	height: 60px;
+	padding: 10px 0;
+	margin-bottom: 20px;
+	width: 100%;
 	margin-left: auto;
-	margin-right: auto;    
-	margin-bottom: 25px;
-	background-color: #306174;
-}  
+	margin-right: auto;
+}
 
 div#course-actions-student {
 	width: 175px;
@@ -624,6 +627,32 @@ div#course-actions-student {
 	margin-bottom: 25px;
 	background-color: #306174;
 }
+
+div.course-action-container {
+	width: 170px;
+	float: left;
+}
+
+div.course-action-container img {
+	height: 30px;
+}
+
+div.course-action-container .ui-button-text {
+	padding-top: 3px;
+	padding-bottom: 2px;
+	padding: 4px 8px 1px 8px;
+}
+
+div.course-action-title {
+	margin-bottom: 3px;
+	font-weight: bold;
+}
+
+.course-action-link {
+	
+}
+
+
 
 /* overwriting look of some dashlet's that behave like buttons*/
 #course-actions div{
@@ -654,6 +683,7 @@ div#course-actions-student {
 .item-label{
     width:60px;
     font-size:1em;
+	font-weight: bold;
 }
 
 .item-input{
@@ -664,15 +694,32 @@ div#course-actions-student {
 
 body {
     margin: 0;
-    font-family: 'MS Sans Serif', Tahoma, Verdana, Helvetica, sans-serif;
-    font-size: 1em;
-    color: #333333;
-    background: #333333;
+	font-family: "Myriad Pro", "Helvetica Neue", HelveticaNeue, Helvetica, Arial;
+    /*font-family: 'MS Sans Serif', Tahoma, Verdana, Helvetica, sans-serif;*/
+    font-size: 0.8em;
+    color: black;
+	background-image: url('/images/bg_tile.jpeg');
+	background-repeat: repeat;
 }
 
 .clear {
     clear: both;
     height: 0px;
+}
+
+a:visited {
+	color: #3B5998;
+	text-decoration: none;
+}
+
+a:link {
+	color: #3B5998;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #3B5998;
+	text-decoration: underline;
 }
 
 #main_content a:link, 
@@ -717,21 +764,6 @@ body {
 }
 
 #global_header, #global_footer {
-    /*
-    background: none repeat scroll 0 0 #FFFFFF;
-    border: 1px solid #000000;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    -webkit-box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
-    -moz-box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
-    box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
-    */
-    
-    background: none repeat scroll 0 0 #FFFFFF;
-    border: 1px solid #000000;
-    border-radius: 6px 6px 6px 6px;
-    box-shadow: 1px 1px 3px #000000;
     text-align: left;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -740,38 +772,11 @@ body {
 }
 
 #global_header {
-    background-image: url("../images/background_top.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    bottom: 0;
-    /*height: 200px;
-    position: fixed;
-    width: 100%;*/
-    z-index: 5;
-    text-align:left;
-}
-
-#global_header img {
-    text-align: left;
-    /*float: left;*/
-    width: 20%;
-    /*height: 20%;*/
-    margin-left: 0px;
+	
 }
 
 #global_footer {
-    background-image: url("../images/background_top.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    bottom: 0;
-    /*height: 200px;
-    position: fixed;
-    width: 100%;*/
-    z-index: 5;
-}
 
-#header div{
-/*    float:left;*/
 }
 
 #main_content {
@@ -793,7 +798,7 @@ body {
 	box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
 */
     overflow: auto;
-    border: 1px solid #000;
+    border: 1px solid gray;
     background: #FFF;
     color: #333333;
     /*font-family: Tahoma, Geneva, sans-serif;*/
@@ -801,12 +806,12 @@ body {
     margin-bottom: .5em;
     margin-left: auto;
     margin-right: auto;
-    /*width: 98%;*/
+/*    width: 98%;*/
     padding: 0 2em 2em 2em;
-/*  padding-bottom: 1.5em;*/
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
+/*    padding-bottom: 1.5em;*/
+/*    -webkit-border-radius: 6px;*/
+/*    -moz-border-radius: 6px;*/
+/*    border-radius: 6px;*/
     -webkit-box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
     -moz-box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
     box-shadow: rgba(255,255,255,0.5) 0px 2px 6px;
@@ -936,4 +941,43 @@ div.jp-video-270p {
     margin: 10px 0;
     padding: 10px;
     width: 63%;
+}
+
+#tags-column {
+	width: 170px;
+	background-image: url("/js/viz/css/col1.png");
+	background-position: left center;
+	background-repeat: no-repeat;
+	padding-left: 15px;
+}
+
+a.cancel-link {
+	margin-right: 10px !important;
+	text-decoration: none !important;
+	font-weight: normal !important;	
+}
+
+a.cancel-link:hover{
+	text-decoration: underline !important;
+}
+
+#image-preview {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.thick-button {
+	height: 35px;
+}
+
+.ui-widget {
+	font-size: inherit;
+}
+
+#content {
+	width: 100%;
+}
+
+.checkbox-list li {
+	margin: 7px 0;
 }
